--- a/Views/Admin/Clases.cshtml
+++ b/Views/Admin/Clases.cshtml
@@ -35,22 +35,24 @@ else
                                         <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
                                             <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                                                    <div class="row">                   
+                                                    <div class="row">
                                                         @foreach (var datax in ViewContext.Controller.ViewBag.Cursos)
                                                         {
-                                                        <div class="col-md-4  mb-3">
+
+                                                            <div class="col-md-4  mb-3">
                                                                 <div class="card" style="border-radius: 20px; border-style: solid; ">
-                                                                    <img class="img-fluid" alt="Clase" src="~/img/panel/clase.jpg" style="border-radius: 20px; border-style: solid; ">
+                                                                    <img class="img-fluid" alt="Clase" src="~/img/panel/clase.jpg" style="border-radius: 20px; border-style: solid; height: 300px; ">
                                                                     <div class="card-body">
                                                                         <h4 class="card-title">@datax.Curs_Nom</h4>
                                                                         <p class="card-text">Capacidad: @datax.Clas_Capa personas.</p>
                                                                         <p class="card-text">Fecha de inicio: @datax.Per_Ini</p>
                                                                         <p class="card-text">Fecha de fin: @datax.Per_Fin</p>
                                                                         <hr />
-                                                                        <button onclick="verCurso(@datax.Clas_ID);" class="btn btn-primary">Administrar curso</button>
+                                                                        <button onclick="verCurso(@datax.Clas_ID);" class="btn btn-primary">Administrar curso</button>  
+                                                                        <button onclick="verCurso(@datax.Clas_ID);" class="btn btn-danger">Eliminar curso</button>
                                                                     </div>
                                                                 </div>
-                                                            </div>  
+                                                            </div>
                                                         } <!-- aca -->
                                                     </div>
                                                 </div>
@@ -68,13 +70,142 @@ else
         </div>
     </main>
 
-
+    <div class="modal fade" id="modalNewClas" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-md-offset-2">
+            <div class="modal-content">
+                <div class="modal-header headerRegister" style="background: #04948c;color: #FFF;">
+                    <h5 class="modal-title" id="titleModal">Curso nuevo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="tile">
+                        <div class="tile-body">
+                            <form id="formUsuario" name="formUsuario" class="form-horizontal">
+                                <input type="hidden" id="idUsuario" name="idUsuario2" value="">
+                                <p class="text-primary">Todos los campos son obligatorios.</p>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtNombreCurso">Nombre del curso</label>
+                                        <input type="text" class="form-control" id="txtNombreCurso" name="txtNombreCurso" required="">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtPeri">Capacidad</label>
+                                        <input type="number" class="form-control" id="txtCapacidad" name="txtCapacidad" required="">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtPeri">ID del periodo</label>
+                                        <input type="number" class="form-control" id="txtPeri" name="txtPeri" required="">
+                                    </div>
+                                </div>
+                                <div class="tile-footer">
+                                    <button id="btnActionForm" onClick="" class="btn btn-primary" type="submit"><i class="fa fa-fw fa-lg fa-check-circle"></i><span id="btnText">Guardar</span></button>&nbsp;&nbsp;&nbsp;
+                                    <button class="btn btn-danger" type="button" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cerrar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     @section scripts{
         <script>
-            function verCurso(id) {
-              var url = '@Url.Action("VerClase", "Admin", new { id = "__id__" })';
+
+              document.addEventListener('DOMContentLoaded', function () {
+        $(document).ready(function () {
+/*------------Para el modal N° 1----------------------*/
+            if (document.querySelector("#formUsuario")) {
+                let formUsuario = document.querySelector("#formUsuario");
+                formUsuario.onsubmit = function (e) {
+                    e.preventDefault();
+
+                    let strNombre = document.querySelector('#txtNombreCurso').value;
+                    let capacidad = document.querySelector('#txtCapacidad').value;
+                    let period = document.querySelector('#txtPeri').value;
+                    period = parseInt(period);
+                    capacidad = parseInt(capacidad);
+                    if (strNombre == '' || capacidad == '' || period == '' || capacidad <= 0 || period<=0) {
+                        swal("Atención", "Todos los campos son obligatorios, o los datos son incorrectos.", "error");
+                        return false;
+                    }
+
+                    let elementsValid = document.getElementsByClassName("valid");
+                    for (let i = 0; i < elementsValid.length; i++) {
+                        if (elementsValid[i].classList.contains('is-invalid')) {
+                            swal("Atención", "Por favor verifique los campos en rojo.", "error");
+                            return false;
+                        }
+                    }
+
+
+                    var data = { strNombre: strNombre, capacidad: capacidad, period: period};
+                      $.ajax({
+                            type: "POST",
+                            url: "@Url.Action("InsertClas", "Admin")",
+                            content: "application/json; charset=utf-8",
+                            dataType: "json",
+                            data: data,
+                            success: function (d) {
+                                var msg = d.msg;
+                                if (d.Success == true) {
+                                    swal("Success", {
+                                        icon: "success",
+                                        title: "Éxito al procesar la petición",
+                                        text: msg,
+                                    });
+                                    $('#modalNewMat').modal("hide");
+                                    formUsuario.reset();
+                                   
+                                    location.reload();
+                                }else {
+                                    swal("Error", {
+                                        icon: "error",
+                                        title: "Error al procesar la petición",
+                                        text: msg,
+                                    });
+                                    $('#modalNewClas').modal("hide");
+                                    formUsuario.reset();
+                                   
+                                }
+                            },
+                            error: function (xhr, textStatus, errorThrown) {
+                                swal("Error", {
+                                    icon: "error",
+                                    title: "Error al procesar la petición",
+                                    text: "Por favor comunique a un administrador en caso de que el error persista.",
+                                });
+                                $('#modalNewClas').modal("hide");
+                                formUsuario.reset();
+                                
+                               
+                            }
+                        });
+                       }
+                        return false;
+            }
+        
+        }, false);
+              });
+                  function openModal() {
+                      $('#modalNewClas').modal('show');
+                  }
+                  function verCurso(id) {
+              var url = '@Url.Action("VerClase", "Admin", new { id = "__id__"})';
                 window.location.href = url.replace('__id__', id);
+            }
+            function sleep(milliseconds) {
+                const date = Date.now();
+                let currentDate = null;
+                do {
+                    currentDate = Date.now();
+                } while (currentDate - date < milliseconds);
             }
 
         </script>
