--- a/Views/Shared/_Paneles.cshtml
+++ b/Views/Shared/_Paneles.cshtml
@@ -77,13 +77,8 @@
                 <li><a class="app-menu__item" href="@Url.Content("~/Admin/Admins")"><i class="app-menu__icon fa fa-lock"></i><span class="app-menu__label">Administradores</span></a></li>
                 <li><a class="app-menu__item" href="@Url.Content("~/Admin/Clases")"><i class="app-menu__icon fas fa-school"></i><span class="app-menu__label">Clases</span></a></li>
                 <li><a class="app-menu__item" href="@Url.Content("~/Admin/Periodos")"><i class="app-menu__icon fa fa-calendar-check-o"></i><span class="app-menu__label">Periodos academicos</span></a></li>
-                <li class="treeview">
-                    <a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-folder-open"></i><span class="app-menu__label">Asignaturas</span><i class="treeview-indicator fa fa-angle-right"></i></a>
-                    <ul class="treeview-menu">
-                        <li><a class="treeview-item" href="@Url.Content("~/Admin/Materias")"><i class="icon fa fa-star"></i> Materias</a></li>
-                        <li><a class="treeview-item" href="@Url.Content("~/Admin/Notas")" target="_blank" rel="noopener"><i class="icon fa fa-star"></i> Modificar notas</a></li>
-                    </ul>
-                </li>
+                <li><a class="app-menu__item" href="@Url.Content("~/Admin/Materias")"><i class="app-menu__icon fas fa-book-reader"></i><span class="app-menu__label">Asignaturas</span></a></li>
+              
 
 
 
